Flex-Bison-Compiler-development/src/main/c/frontend/syntactic-analysis/BisonParser.output
Terminals unused in grammar

    SEMI
    UNKNOWN


Grammar

    0 $accept: program $end

    1 program: object

    2 object: OPEN_BRACE pairList CLOSE_BRACE

    3 pairList: %empty
    4         | pair
    5         | pairList COMMA pair

    6 pair: key COLON value

    7 key: TYPE
    8    | CONTENT
    9    | DIV
   10    | VAR
   11    | IMG
   12    | SRC
   13    | ALT
   14    | BODY
   15    | REF
   16    | STYLE
   17    | text
   18    | property

   19 property: TEXTALIGN
   20         | COLOR
   21         | BACKGROUND_COLOR

   22 text: H1
   23     | H2
   24     | H3
   25     | H4
   26     | A
   27     | SPAN
   28     | P
   29     | TITLE

   30 value: STRING
   31      | JSON_NULL
   32      | object
   33      | array
   34      | loop
   35      | variableRef

   36 array: OPEN_BRACKET valueList CLOSE_BRACKET

   37 valueList: %empty
   38          | value
   39          | valueList COMMA value

   40 loop: FOR OPEN_PARENTHESIS IDENTIFIER IN object CLOSE_PARENTHESIS object

   41 variableRef: DOLLAR IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    CLOSE_PARENTHESIS <token> (258) 40
    OPEN_PARENTHESIS <token> (259) 40
    OPEN_BRACE <token> (260) 2
    CLOSE_BRACE <token> (261) 2
    OPEN_BRACKET <token> (262) 36
    CLOSE_BRACKET <token> (263) 36
    COMMA <token> (264) 5 39
    COLON <token> (265) 6
    SEMI <token> (266)
    FOR <token> (267) 40
    IN <token> (268) 40
    STRING <string> (269) 30
    IDENTIFIER <string> (270) 40 41
    JSON_NULL <token> (271) 31
    DOLLAR <token> (272) 41
    UNKNOWN <token> (273)
    TYPE <token> (274) 7
    CONTENT <token> (275) 8
    DIV <token> (276) 9
    VAR <token> (277) 10
    IMG <token> (278) 11
    SRC <token> (279) 12
    ALT <token> (280) 13
    BODY <token> (281) 14
    REF <token> (282) 15
    H1 <token> (283) 22
    H2 <token> (284) 23
    H3 <token> (285) 24
    H4 <token> (286) 25
    A <token> (287) 26
    SPAN <token> (288) 27
    P <token> (289) 28
    TITLE <token> (290) 29
    TEXTALIGN <token> (291) 19
    COLOR <token> (292) 20
    BACKGROUND_COLOR <token> (293) 21
    STYLE <token> (294) 16


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    program <program> (41)
        on left: 1
        on right: 0
    object <object> (42)
        on left: 2
        on right: 1 32 40
    pairList <pairList> (43)
        on left: 3 4 5
        on right: 2 5
    pair <pair> (44)
        on left: 6
        on right: 4 5
    key <keyword> (45)
        on left: 7 8 9 10 11 12 13 14 15 16 17 18
        on right: 6
    property <keyword> (46)
        on left: 19 20 21
        on right: 18
    text <keyword> (47)
        on left: 22 23 24 25 26 27 28 29
        on right: 17
    value <value> (48)
        on left: 30 31 32 33 34 35
        on right: 6 38 39
    array <array> (49)
        on left: 36
        on right: 33
    valueList <valueList> (50)
        on left: 37 38 39
        on right: 36 39
    loop <loop> (51)
        on left: 40
        on right: 34
    variableRef <varRef> (52)
        on left: 41
        on right: 35


State 0

    0 $accept: . program $end

    OPEN_BRACE  shift, and go to state 1

    program  go to state 2
    object   go to state 3


State 1

    2 object: OPEN_BRACE . pairList CLOSE_BRACE

    TYPE              shift, and go to state 4
    CONTENT           shift, and go to state 5
    DIV               shift, and go to state 6
    VAR               shift, and go to state 7
    IMG               shift, and go to state 8
    SRC               shift, and go to state 9
    ALT               shift, and go to state 10
    BODY              shift, and go to state 11
    REF               shift, and go to state 12
    H1                shift, and go to state 13
    H2                shift, and go to state 14
    H3                shift, and go to state 15
    H4                shift, and go to state 16
    A                 shift, and go to state 17
    SPAN              shift, and go to state 18
    P                 shift, and go to state 19
    TITLE             shift, and go to state 20
    TEXTALIGN         shift, and go to state 21
    COLOR             shift, and go to state 22
    BACKGROUND_COLOR  shift, and go to state 23
    STYLE             shift, and go to state 24

    $default  reduce using rule 3 (pairList)

    pairList  go to state 25
    pair      go to state 26
    key       go to state 27
    property  go to state 28
    text      go to state 29


State 2

    0 $accept: program . $end

    $end  shift, and go to state 30


State 3

    1 program: object .

    $default  reduce using rule 1 (program)


State 4

    7 key: TYPE .

    $default  reduce using rule 7 (key)


State 5

    8 key: CONTENT .

    $default  reduce using rule 8 (key)


State 6

    9 key: DIV .

    $default  reduce using rule 9 (key)


State 7

   10 key: VAR .

    $default  reduce using rule 10 (key)


State 8

   11 key: IMG .

    $default  reduce using rule 11 (key)


State 9

   12 key: SRC .

    $default  reduce using rule 12 (key)


State 10

   13 key: ALT .

    $default  reduce using rule 13 (key)


State 11

   14 key: BODY .

    $default  reduce using rule 14 (key)


State 12

   15 key: REF .

    $default  reduce using rule 15 (key)


State 13

   22 text: H1 .

    $default  reduce using rule 22 (text)


State 14

   23 text: H2 .

    $default  reduce using rule 23 (text)


State 15

   24 text: H3 .

    $default  reduce using rule 24 (text)


State 16

   25 text: H4 .

    $default  reduce using rule 25 (text)


State 17

   26 text: A .

    $default  reduce using rule 26 (text)


State 18

   27 text: SPAN .

    $default  reduce using rule 27 (text)


State 19

   28 text: P .

    $default  reduce using rule 28 (text)


State 20

   29 text: TITLE .

    $default  reduce using rule 29 (text)


State 21

   19 property: TEXTALIGN .

    $default  reduce using rule 19 (property)


State 22

   20 property: COLOR .

    $default  reduce using rule 20 (property)


State 23

   21 property: BACKGROUND_COLOR .

    $default  reduce using rule 21 (property)


State 24

   16 key: STYLE .

    $default  reduce using rule 16 (key)


State 25

    2 object: OPEN_BRACE pairList . CLOSE_BRACE
    5 pairList: pairList . COMMA pair

    CLOSE_BRACE  shift, and go to state 31
    COMMA        shift, and go to state 32


State 26

    4 pairList: pair .

    $default  reduce using rule 4 (pairList)


State 27

    6 pair: key . COLON value

    COLON  shift, and go to state 33


State 28

   18 key: property .

    $default  reduce using rule 18 (key)


State 29

   17 key: text .

    $default  reduce using rule 17 (key)


State 30

    0 $accept: program $end .

    $default  accept


State 31

    2 object: OPEN_BRACE pairList CLOSE_BRACE .

    $default  reduce using rule 2 (object)


State 32

    5 pairList: pairList COMMA . pair

    TYPE              shift, and go to state 4
    CONTENT           shift, and go to state 5
    DIV               shift, and go to state 6
    VAR               shift, and go to state 7
    IMG               shift, and go to state 8
    SRC               shift, and go to state 9
    ALT               shift, and go to state 10
    BODY              shift, and go to state 11
    REF               shift, and go to state 12
    H1                shift, and go to state 13
    H2                shift, and go to state 14
    H3                shift, and go to state 15
    H4                shift, and go to state 16
    A                 shift, and go to state 17
    SPAN              shift, and go to state 18
    P                 shift, and go to state 19
    TITLE             shift, and go to state 20
    TEXTALIGN         shift, and go to state 21
    COLOR             shift, and go to state 22
    BACKGROUND_COLOR  shift, and go to state 23
    STYLE             shift, and go to state 24

    pair      go to state 34
    key       go to state 27
    property  go to state 28
    text      go to state 29


State 33

    6 pair: key COLON . value

    OPEN_BRACE    shift, and go to state 1
    OPEN_BRACKET  shift, and go to state 35
    FOR           shift, and go to state 36
    STRING        shift, and go to state 37
    JSON_NULL     shift, and go to state 38
    DOLLAR        shift, and go to state 39

    object       go to state 40
    value        go to state 41
    array        go to state 42
    loop         go to state 43
    variableRef  go to state 44


State 34

    5 pairList: pairList COMMA pair .

    $default  reduce using rule 5 (pairList)


State 35

   36 array: OPEN_BRACKET . valueList CLOSE_BRACKET

    OPEN_BRACE    shift, and go to state 1
    OPEN_BRACKET  shift, and go to state 35
    FOR           shift, and go to state 36
    STRING        shift, and go to state 37
    JSON_NULL     shift, and go to state 38
    DOLLAR        shift, and go to state 39

    $default  reduce using rule 37 (valueList)

    object       go to state 40
    value        go to state 45
    array        go to state 42
    valueList    go to state 46
    loop         go to state 43
    variableRef  go to state 44


State 36

   40 loop: FOR . OPEN_PARENTHESIS IDENTIFIER IN object CLOSE_PARENTHESIS object

    OPEN_PARENTHESIS  shift, and go to state 47


State 37

   30 value: STRING .

    $default  reduce using rule 30 (value)


State 38

   31 value: JSON_NULL .

    $default  reduce using rule 31 (value)


State 39

   41 variableRef: DOLLAR . IDENTIFIER

    IDENTIFIER  shift, and go to state 48


State 40

   32 value: object .

    $default  reduce using rule 32 (value)


State 41

    6 pair: key COLON value .

    $default  reduce using rule 6 (pair)


State 42

   33 value: array .

    $default  reduce using rule 33 (value)


State 43

   34 value: loop .

    $default  reduce using rule 34 (value)


State 44

   35 value: variableRef .

    $default  reduce using rule 35 (value)


State 45

   38 valueList: value .

    $default  reduce using rule 38 (valueList)


State 46

   36 array: OPEN_BRACKET valueList . CLOSE_BRACKET
   39 valueList: valueList . COMMA value

    CLOSE_BRACKET  shift, and go to state 49
    COMMA          shift, and go to state 50


State 47

   40 loop: FOR OPEN_PARENTHESIS . IDENTIFIER IN object CLOSE_PARENTHESIS object

    IDENTIFIER  shift, and go to state 51


State 48

   41 variableRef: DOLLAR IDENTIFIER .

    $default  reduce using rule 41 (variableRef)


State 49

   36 array: OPEN_BRACKET valueList CLOSE_BRACKET .

    $default  reduce using rule 36 (array)


State 50

   39 valueList: valueList COMMA . value

    OPEN_BRACE    shift, and go to state 1
    OPEN_BRACKET  shift, and go to state 35
    FOR           shift, and go to state 36
    STRING        shift, and go to state 37
    JSON_NULL     shift, and go to state 38
    DOLLAR        shift, and go to state 39

    object       go to state 40
    value        go to state 52
    array        go to state 42
    loop         go to state 43
    variableRef  go to state 44


State 51

   40 loop: FOR OPEN_PARENTHESIS IDENTIFIER . IN object CLOSE_PARENTHESIS object

    IN  shift, and go to state 53


State 52

   39 valueList: valueList COMMA value .

    $default  reduce using rule 39 (valueList)


State 53

   40 loop: FOR OPEN_PARENTHESIS IDENTIFIER IN . object CLOSE_PARENTHESIS object

    OPEN_BRACE  shift, and go to state 1

    object  go to state 54


State 54

   40 loop: FOR OPEN_PARENTHESIS IDENTIFIER IN object . CLOSE_PARENTHESIS object

    CLOSE_PARENTHESIS  shift, and go to state 55


State 55

   40 loop: FOR OPEN_PARENTHESIS IDENTIFIER IN object CLOSE_PARENTHESIS . object

    OPEN_BRACE  shift, and go to state 1

    object  go to state 56


State 56

   40 loop: FOR OPEN_PARENTHESIS IDENTIFIER IN object CLOSE_PARENTHESIS object .

    $default  reduce using rule 40 (loop)
